RESOLVED FIXED297815
[JSC] IPInt SIMD entrypoint should throw error correctly
https://bugs.webkit.org/show_bug.cgi?id=297815
Summary [JSC] IPInt SIMD entrypoint should throw error correctly
Yusuke Suzuki
Reported 2025-08-22 17:59:55 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-22 18:00:04 PDT
Yusuke Suzuki
Comment 2 2025-08-22 18:03:08 PDT
Yusuke Suzuki
Comment 3 2025-08-22 18:03:23 PDT
EWS
Comment 4 2025-08-25 11:20:36 PDT
Committed 299122@main (ea8ba765cb6b): <https://commits.webkit.org/299122@main> Reviewed commits have been landed. Closing PR #49803 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.