[JSC] IPInt SIMD entrypoint should throw error correctly https://bugs.webkit.org/show_bug.cgi?id=297815 rdar://158957311

Reviewed by Yijia Huang.

We found that IPInt SIMD prologue stub is not handling errors correctly.

1. BBQJIT plan should notify compilation failure to IPIntTierUpCounter.
   So IPInt side will find this. Avoiding dead lock.
2. IPInt SIMD prologue should throw an error when the error code is returned.
3. Move this prologue implementation to InPlaceInterpreter side as it is
   relying on InPlaceInterpreter.

* Source/JavaScriptCore/llint/InPlaceInterpreter.asm:
* Source/JavaScriptCore/llint/WebAssembly.asm:
* Source/JavaScriptCore/wasm/WasmBBQPlan.cpp:
(JSC::Wasm::BBQPlan::work):
(JSC::Wasm::BBQPlan::compileFunction):
(JSC::Wasm::BBQPlan::fail):
* Source/JavaScriptCore/wasm/WasmBBQPlan.h:
* Source/JavaScriptCore/wasm/WasmCallee.cpp:
(JSC::Wasm::IPIntCallee::calleeSaveRegistersImpl):
* Source/JavaScriptCore/wasm/WasmIPIntSlowPaths.cpp:
(JSC::IPInt::jitCompileAndSetHeuristics):
(JSC::IPInt::jitCompileSIMDFunction):
(JSC::IPInt::WASM_IPINT_EXTERN_CPP_DECL):
* Source/JavaScriptCore/wasm/WasmIPIntTierUpCounter.h:
(JSC::Wasm::IPIntTierUpCounter::IPIntTierUpCounter):
(JSC::Wasm::IPIntTierUpCounter::WTF_REQUIRES_LOCK):
(JSC::Wasm::IPIntTierUpCounter::resetAndOptimizeSoon):
* Source/JavaScriptCore/wasm/WasmOMGPlan.cpp:
(JSC::Wasm::OMGPlan::work):
* Source/JavaScriptCore/wasm/WasmPlan.cpp:
(JSC::Wasm::Plan::fail):
* Source/JavaScriptCore/wasm/WasmPlan.h:
(JSC::Wasm::Plan::error const):

Canonical link: https://commits.webkit.org/299122@main