Source/JavaScriptCore/wasm/WasmBBQPlan.cpp
@@ -100,8 +100,7 @@ void BBQPlan::work()
 
     LinkBuffer linkBuffer(*context.wasmEntrypointJIT, callee.ptr(), LinkBuffer::Profile::WasmBBQ, JITCompilationCanFail);
     if (linkBuffer.didFailToAllocate()) [[unlikely]] {
-        Locker locker { m_lock };
-        Base::fail(makeString("Out of executable memory while tiering up function at index "_s, m_functionIndex.rawIndex()), Plan::Error::OutOfMemory);
+        fail(makeString("Out of executable memory while tiering up function at index "_s, m_functionIndex.rawIndex()), CompilationError::OutOfMemory);
         return;
     }
 
@@ -182,15 +181,31 @@ std::unique_ptr<InternalFunction> BBQPlan::compileFunction(FunctionCodeIndex fun
     endCompilerSignpost(callee);
 
     if (!parseAndCompileResult) [[unlikely]] {
-        Locker locker { m_lock };
-        if (!m_errorMessage) {
-            // Multiple compiles could fail simultaneously. We arbitrarily choose the first.
-            fail(makeString(parseAndCompileResult.error(), ", in function at index "_s, functionIndex.rawIndex())); // FIXME: make this an Expected.
-        }
+        fail(makeString(parseAndCompileResult.error(), ", in function at index "_s, functionIndex.rawIndex()), CompilationError::Parse); // FIXME: make this an Expected.
         return nullptr;
     }
 
     return WTFMove(*parseAndCompileResult);
+}
+
+void BBQPlan::fail(String&& errorMessage, CompilationError error)
+{
+    {
+        Locker locker { m_lock };
+        if (!m_errorMessage) {
+            // Multiple compiles could fail simultaneously. We arbitrarily choose the first.
+            Base::fail(WTFMove(errorMessage), error);
+        }
+    }
+    {
+        Locker locker { m_calleeGroup->m_lock };
+        {
+            IPIntCallee& ipintCallee = m_calleeGroup->m_ipintCallees->at(m_functionIndex).get();
+            Locker locker { ipintCallee.tierUpCounter().m_lock };
+            ipintCallee.tierUpCounter().setCompilationStatus(mode(), IPIntTierUpCounter::CompilationStatus::Failed);
+            ipintCallee.tierUpCounter().setCompilationError(mode(), error);
+        }
+    }
 }
 
 } } // namespace JSC::Wasm
